// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyze CNS NFT 1: nft analysis result 1`] = `
Object {
  "cnsAddress": "5662b49a357db4f05c2c141452b72fb91e7ec286e9b47d6c287210c63ae5cd3e",
  "cnsBindings": undefined,
  "cnsExpiry": "1671672707",
  "cnsName": "xxxicertest.xch",
  "coin": Object {
    "amount": 1,
    "parent_coin_info": "0x0474af3289a38bc18d9769596aea5b2f7283c1567d3f8430ee57f2f94ec7975e",
    "puzzle_hash": "0x66b14da3623607a7000f770df4c4f32d2d4b893fc5c0a2a9126629d6af2dffed",
  },
  "didOwner": "()",
  "hintPuzzle": "0xbae24162efbd568f89bc7a340798a6118df0189eb9e3f8697bcea27af99f8f79",
  "launcherId": "0x8af7b07dc48079d06c0713136359740d61c3a901989125e5dac66d370750171e",
  "launcherPuzzleHash": "0xeff07522495060c066f66f32acc2a77e3a3e737aca8baea4d1a64ea4cdc13da9",
  "metadata": Object {
    "expiry": "1671672707",
    "imageHash": "d519e6a8dfb8f9d7b208156d2b32c238bc7629a0140c88804df7f13f99e67901",
    "imageUri": "https://storage.pawket.app/ipfs/QmQfhEEA4o1h5hY8gnoEkdpQGWE89xNCxQ4w5bsdacSpZN?filename=xxxicertest.xch.jpg",
    "licenseHash": "",
    "licenseUri": "",
    "metadataHash": "61e1b74b11f9f7550f99e68d99839ddf58c322efbf0ec0f0fa4a7dae5d421b64",
    "metadataUri": "https://storage.pawket.app/ipfs/Qmcd2SammSDeJXxB5QiQg9CDCPLMxaMfMQXmWuZzBYBNLq?filename=xxxicertest.xchmetadata.json",
    "name": "xxxicertest.xch",
    "serialNumber": "01",
    "serialTotal": "01",
  },
  "metadataUpdaterPuzzleHash": "0x20ea3991407203334e6a705517f4cba83f7987353d883f0938633ce7e1740fad",
  "nextCoinName": "0xa3f293b7bcc67e324b6519b35b0ee84358642904572350a0468f9961f7e4b3cc",
  "nftOwnershipModHash": "0xc5abea79afaa001b5427dfa0c8cf42ca6f38f5841b78f9b3c252733eb2de2726",
  "nftStateModHash": "0xa04d9f57764f54a43e4030befb4d80026e870519aaa66334aef8304f5d0393c2",
  "p2InnerPuzzle": "(a (q 2 10 (c 2 (c 3 ()))) (c (q (51 . 62) (a (i 5 (q 4 (c 12 (c (a 30 (c 2 (c 9 ()))) ())) (a 22 (c 2 (c 25 (c (a 10 (c 2 (c 13 ()))) ()))))) ()) 1) (a (i 5 (q 4 (c 8 9) (a 22 (c 2 (c 13 (c 11 ()))))) (q . 11)) 1) 2 (i (l 5) (q 11 (q . 2) (a 30 (c 2 (c 9 ()))) (a 30 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1))",
  "p2Owner": "5662b49a357db4f05c2c141452b72fb91e7ec286e9b47d6c287210c63ae5cd3e",
  "previousOwner": "()",
  "rawMetadata": "((117 \\"https://storage.pawket.app/ipfs/QmQfhEEA4o1h5hY8gnoEkdpQGWE89xNCxQ4w5bsdacSpZN?filename=xxxicertest.xch.jpg\\") (104 . 0xd519e6a8dfb8f9d7b208156d2b32c238bc7629a0140c88804df7f13f99e67901) (28021 \\"https://storage.pawket.app/ipfs/Qmcd2SammSDeJXxB5QiQg9CDCPLMxaMfMQXmWuZzBYBNLq?filename=xxxicertest.xchmetadata.json\\") (28008 . 0x61e1b74b11f9f7550f99e68d99839ddf58c322efbf0ec0f0fa4a7dae5d421b64) (27765) (27752) (29550 . 1) (29556 . 1) (25976 . 0x63a3b383) (28269 . \\"xxxicertest.xch\\") (25188))",
  "royaltyAddress": "0x5ef381bc66ed8e3d87d9622ceb223f964a222bdfcb4001608ec2c99262b6f56a",
  "singletonModHash": "0x7faa3253bfddd1e0decb0906b2dc6247bbc4cf608f58345d173adb63e8b47c9f",
  "tradePricePercentage": 500,
}
`;

exports[`Analyze Nft 1: nft analysis result 1`] = `
Object {
  "coin": Object {
    "amount": 1,
    "parent_coin_info": "0xed52525bcccb48416babccd02d76f9722cc30b1b54ffab4b44bb23617ef37d21",
    "puzzle_hash": "0x15b4bd8aff6ecd59aa00cb412437fa838d9f6c81a19166ab41e4f860866a0266",
  },
  "didOwner": "",
  "hintPuzzle": "0xdb308b6dcd4cd92a905934bc50d1e66f8788e876abe772c4c2b6bbe71e3b5f6f",
  "launcherId": "0xd6aae8561702bb0144752c01e2ebae7fbdeccdc0d4d6f1eda0100300dcf30bdc",
  "launcherPuzzleHash": "0xeff07522495060c066f66f32acc2a77e3a3e737aca8baea4d1a64ea4cdc13da9",
  "metadata": Object {
    "imageHash": "e62bcdc91903b07b7b86f1af11c5fdd9c3b545bfff90515976f9e8d67c91eb0f",
    "imageUri": "https://guggero.github.io/cryptography-toolkit/images/fork-me-on-github-ribbon.png",
    "licenseHash": "2267456bd2cef8ebc2f22a42947b068bc3b138284a587feda2edfe07a3577f50",
    "licenseUri": "https://bafybeigzcazxeu7epmm4vtkuadrvysv74lbzzbl2evphtae6k57yhgynp4.ipfs.nftstorage.link/license.pdf",
    "metadataHash": "44475cb971933e4545efad1337f3d68bc53523d987412df233f3b905ed1c5b3f",
    "metadataUri": "https://ufzyuv55yicm3ev56cstqbmaayrkudmmjueyrd3nkolafxbe.arweave.net/oX--OKV73CBM2-SvfClOAWABiKqDYxNCYiPbVOWAtwk",
    "serialNumber": "07",
    "serialTotal": "05",
  },
  "metadataUpdaterPuzzleHash": "0xfe8a4b4e27a2e29a4d3fc7ce9d527adbcaccbab6ada3903ccf3ba9a769d2d78b",
  "nextCoinName": "0x0d3d0dbfd6b87c4bb6cabedab623784af1dddeb93181a8e00afc0105aaac96ec",
  "nftOwnershipModHash": "0xc5abea79afaa001b5427dfa0c8cf42ca6f38f5841b78f9b3c252733eb2de2726",
  "nftStateModHash": "0xa04d9f57764f54a43e4030befb4d80026e870519aaa66334aef8304f5d0393c2",
  "p2InnerPuzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x9609418cb2545f1faf0ec37359591012251f0e7e9b94bbad13ee79701307eb5b6b8d1f62646f925dcb6c24a132a71355) 1))",
  "p2Owner": "8f972e809806a42ec005beb3019665bea4b3478c9582bf43708bb1c261916a51",
  "previousOwner": "()",
  "rawMetadata": "((117 \\"https://guggero.github.io/cryptography-toolkit/images/fork-me-on-github-ribbon.png\\") (104 . 0xe62bcdc91903b07b7b86f1af11c5fdd9c3b545bfff90515976f9e8d67c91eb0f) (28021 \\"https://ufzyuv55yicm3ev56cstqbmaayrkudmmjueyrd3nkolafxbe.arweave.net/oX--OKV73CBM2-SvfClOAWABiKqDYxNCYiPbVOWAtwk\\") (27765 \\"https://bafybeigzcazxeu7epmm4vtkuadrvysv74lbzzbl2evphtae6k57yhgynp4.ipfs.nftstorage.link/license.pdf\\") (29550 . 7) (29556 . 5) (28008 . 0x44475cb971933e4545efad1337f3d68bc53523d987412df233f3b905ed1c5b3f) (27752 . 0x2267456bd2cef8ebc2f22a42947b068bc3b138284a587feda2edfe07a3577f50))",
  "royaltyAddress": "0x5662b49a357db4f05c2c141452b72fb91e7ec286e9b47d6c287210c63ae5cd3e",
  "singletonModHash": "0x7faa3253bfddd1e0decb0906b2dc6247bbc4cf608f58345d173adb63e8b47c9f",
  "tradePricePercentage": 500,
}
`;

exports[`Analyze Nft 2: nft analysis result 1`] = `
Object {
  "coin": Object {
    "amount": 1,
    "parent_coin_info": "0x250e8e8db0a28c72b5951d2f9572b582358451d649c8b4082bb6a5e867945115",
    "puzzle_hash": "0xef2e6d51f3d15f544674728ff6dba1f23fb0bd273a93e516ef167f424e594d5b",
  },
  "didOwner": "",
  "hintPuzzle": "0x7ed1a136bdb4016e62922e690b897e85ee1970f1caf63c1cbe27e4e32f776d10",
  "launcherId": "0x74cc7e5904310477bae6e250910da9fee0e604b93d73a180cbd052d12f56769a",
  "launcherPuzzleHash": "0xeff07522495060c066f66f32acc2a77e3a3e737aca8baea4d1a64ea4cdc13da9",
  "metadata": Object {
    "imageHash": "e62bcdc91903b07b7b86f1af11c5fdd9c3b545bfff90515976f9e8d67c91eb0f",
    "imageUri": "https://guggero.github.io/cryptography-toolkit/images/fork-me-on-github-ribbon.png",
    "licenseHash": "2267456bd2cef8ebc2f22a42947b068bc3b138284a587feda2edfe07a3577f50",
    "licenseUri": "https://bafybeigzcazxeu7epmm4vtkuadrvysv74lbzzbl2evphtae6k57yhgynp4.ipfs.nftstorage.link/license.pdf",
    "metadataHash": "44475cb971933e4545efad1337f3d68bc53523d987412df233f3b905ed1c5b3f",
    "metadataUri": "https://ufzyuv55yicm3ev56cstqbmaayrkudmmjueyrd3nkolafxbe.arweave.net/oX--OKV73CBM2-SvfClOAWABiKqDYxNCYiPbVOWAtwk",
    "serialNumber": "08",
    "serialTotal": "05",
  },
  "metadataUpdaterPuzzleHash": "0xfe8a4b4e27a2e29a4d3fc7ce9d527adbcaccbab6ada3903ccf3ba9a769d2d78b",
  "nextCoinName": "0x22344f85ad46eaff6831b78eb218bb5c74761ce5dbd29c1705aae0105a20273a",
  "nftOwnershipModHash": "0xc5abea79afaa001b5427dfa0c8cf42ca6f38f5841b78f9b3c252733eb2de2726",
  "nftStateModHash": "0xa04d9f57764f54a43e4030befb4d80026e870519aaa66334aef8304f5d0393c2",
  "p2InnerPuzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x92c7027d455e843b1226b757c1dd5e124e0e6ddab3549036a4684b410182fdfd1eee459eb76a4d6d73e94f90fbe6eb1d) 1))",
  "p2Owner": "db308b6dcd4cd92a905934bc50d1e66f8788e876abe772c4c2b6bbe71e3b5f6f",
  "previousOwner": "0x7b7f7ae9d65865d67a0305828e940b470a11f94e96568b5df98174147a92f0d6",
  "rawMetadata": "((117 \\"https://guggero.github.io/cryptography-toolkit/images/fork-me-on-github-ribbon.png\\") (104 . 0xe62bcdc91903b07b7b86f1af11c5fdd9c3b545bfff90515976f9e8d67c91eb0f) (28021 \\"https://ufzyuv55yicm3ev56cstqbmaayrkudmmjueyrd3nkolafxbe.arweave.net/oX--OKV73CBM2-SvfClOAWABiKqDYxNCYiPbVOWAtwk\\") (27765 \\"https://bafybeigzcazxeu7epmm4vtkuadrvysv74lbzzbl2evphtae6k57yhgynp4.ipfs.nftstorage.link/license.pdf\\") (29550 . 8) (29556 . 5) (28008 . 0x44475cb971933e4545efad1337f3d68bc53523d987412df233f3b905ed1c5b3f) (27752 . 0x2267456bd2cef8ebc2f22a42947b068bc3b138284a587feda2edfe07a3577f50))",
  "royaltyAddress": "0x5662b49a357db4f05c2c141452b72fb91e7ec286e9b47d6c287210c63ae5cd3e",
  "singletonModHash": "0x7faa3253bfddd1e0decb0906b2dc6247bbc4cf608f58345d173adb63e8b47c9f",
  "tradePricePercentage": 800,
}
`;

exports[`Analyze Nft 3: nft analysis result 1`] = `
Object {
  "coin": Object {
    "amount": 1,
    "parent_coin_info": "0x5883c8c63817daef11bdf901714620752f24dfb05533be95f8d926c1cfd1a3fa",
    "puzzle_hash": "0x26c70fae272ce7d625d81fcf058e19aadb6d6320d1186985ae2be9358eace3e3",
  },
  "didOwner": "",
  "hintPuzzle": "0x4c61cafe5965913de3655cc6a5015ec196a1cf8fe1652e2951245f4dac9e01c6",
  "launcherId": "0x8ec91e9bb35b5ab71d788868968c2a16a7b861d844c3e773671758b45ef94832",
  "launcherPuzzleHash": "0xeff07522495060c066f66f32acc2a77e3a3e737aca8baea4d1a64ea4cdc13da9",
  "metadata": Object {
    "imageHash": "cc7f660e33a5450077105e3803dd463192e28dc7a79b37b34ad7499073b50b8b",
    "imageUri": "https://q4njcsrgfilv6fqjyi4mxlwjvuawoaavnfdyqkqk3zqadfwy.arweave.net/hxqRSiYqF18WCcI4-y67JrQFnABVp__R4gqCt5gAZbY",
    "licenseHash": "00",
    "licenseUri": "",
    "metadataHash": "4277d4ad83d402d7d41c1ec689c929b7e6b2ca04ceca25e1b29d4c876738c8da",
    "metadataUri": "https://bbsboguf32iha4zaeoy36oyvlftyycbtdhhhojffh3jskfc6xy.arweave.net/CGQXGoXekHBzICOxvzsVWWeMCDMZz-nckpT7TJRRevk",
    "serialNumber": "01",
    "serialTotal": "01",
  },
  "metadataUpdaterPuzzleHash": "0xfe8a4b4e27a2e29a4d3fc7ce9d527adbcaccbab6ada3903ccf3ba9a769d2d78b",
  "nextCoinName": "0x0431b9444fa63a0c98d96ceb22a25da3f11b2b560bd304cc7ae0ef75c0033cd1",
  "nftOwnershipModHash": "0xc5abea79afaa001b5427dfa0c8cf42ca6f38f5841b78f9b3c252733eb2de2726",
  "nftStateModHash": "0xa04d9f57764f54a43e4030befb4d80026e870519aaa66334aef8304f5d0393c2",
  "p2InnerPuzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x95e5a8c571f8456090ac42a023254327203ba32066c91cb754acf09e8995120a981a71f10547507cb203f2edb397e9d4) 1))",
  "p2Owner": "934b1b7a0a50e0f01a60513f66af90694359fe7e14ae184ff1c4a4436bf4f8b1",
  "previousOwner": "()",
  "rawMetadata": "((117 \\"https://q4njcsrgfilv6fqjyi4mxlwjvuawoaavnfdyqkqk3zqadfwy.arweave.net/hxqRSiYqF18WCcI4-y67JrQFnABVp__R4gqCt5gAZbY\\") (104 . 0xcc7f660e33a5450077105e3803dd463192e28dc7a79b37b34ad7499073b50b8b) (28021 \\"https://bbsboguf32iha4zaeoy36oyvlftyycbtdhhhojffh3jskfc6xy.arweave.net/CGQXGoXekHBzICOxvzsVWWeMCDMZz-nckpT7TJRRevk\\") (28008 . 0x4277d4ad83d402d7d41c1ec689c929b7e6b2ca04ceca25e1b29d4c876738c8da) (27765) (27752 . 0x00) (29550 . 1) (29556 . 1))",
  "royaltyAddress": "0x50c065d539852dc1a51a735fa37a6d29598ad4c01248854269521c31617143be",
  "singletonModHash": "0x7faa3253bfddd1e0decb0906b2dc6247bbc4cf608f58345d173adb63e8b47c9f",
  "tradePricePercentage": 500,
}
`;

exports[`Analyze Nft 4: nft analysis result 1`] = `
Object {
  "coin": Object {
    "amount": 1,
    "parent_coin_info": "0xef584d9698144dc3ece1fd25873b76d9bf3891b540f890f7e10b564731cc4829",
    "puzzle_hash": "0x9aef2a2cb3d72ab0458595fa43d4aadccad4838a24fee002e86c89ca14022ee0",
  },
  "didOwner": "",
  "hintPuzzle": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "launcherId": "0x5293c873037e8dc8000519a86ab8ed2f60d9d53db49aca3316859057954ea0a9",
  "launcherPuzzleHash": "0xeff07522495060c066f66f32acc2a77e3a3e737aca8baea4d1a64ea4cdc13da9",
  "metadata": Object {
    "imageHash": "5d314a2dd1f648041ef88102ddfe0a51766b2a535ddd3a4c682879615fd220d4",
    "imageUri": Array [
      "https://bafybeib7mxxa3oplw42tiwyorxztsywpwujxtswok4256o3nr6t2aa3guy.ipfs.nftstorage.link/nft/202281/5d314a2dd1f648041ef88102ddfe0a51766b2a535ddd3a4c682879615fd220d4.png",
      "https://github.com/nongyehezuoshe/bshn/raw/main/nft/202281/5d314a2dd1f648041ef88102ddfe0a51766b2a535ddd3a4c682879615fd220d4.png",
    ],
    "licenseHash": "",
    "licenseUri": "",
    "metadataHash": "cc101ce2b80998a8da3fa638b3accff5631abbae9b5e5a13120881efed8145dd",
    "metadataUri": Array [
      "https://bafybeighvsqccu4nq2zcogcj5avn3odchwd663knfkdemwxn2exkrwidjm.ipfs.nftstorage.link/meta/202281/cc101ce2b80998a8da3fa638b3accff5631abbae9b5e5a13120881efed8145dd.json",
      "https://github.com/nongyehezuoshe/bshn/raw/main/meta/202281/cc101ce2b80998a8da3fa638b3accff5631abbae9b5e5a13120881efed8145dd.json",
    ],
    "serialNumber": "01",
    "serialTotal": "01",
  },
  "metadataUpdaterPuzzleHash": "0xfe8a4b4e27a2e29a4d3fc7ce9d527adbcaccbab6ada3903ccf3ba9a769d2d78b",
  "nextCoinName": "0x19d6781708289fec2534ff1d906369a157d020f17870b5d0fa952e463c9f6cd0",
  "nftOwnershipModHash": "0xc5abea79afaa001b5427dfa0c8cf42ca6f38f5841b78f9b3c252733eb2de2726",
  "nftStateModHash": "0xa04d9f57764f54a43e4030befb4d80026e870519aaa66334aef8304f5d0393c2",
  "p2InnerPuzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x9684f017a0b02928260108206a96ed3c66c724b69005c05626109435f184ca980960c1a008437c5d118f016f16c3d51e) 1))",
  "p2Owner": "05082518df7b5277bdadd31f5ddcea5c00152bfd714ab6f325cbb2f6155c7f15",
  "previousOwner": "0x977a6f53dd6ee1fb3754550c493845be0a2b1cd82515f3a035afd12265a5d897",
  "rawMetadata": "((117 \\"https://bafybeib7mxxa3oplw42tiwyorxztsywpwujxtswok4256o3nr6t2aa3guy.ipfs.nftstorage.link/nft/202281/5d314a2dd1f648041ef88102ddfe0a51766b2a535ddd3a4c682879615fd220d4.png\\" \\"https://github.com/nongyehezuoshe/bshn/raw/main/nft/202281/5d314a2dd1f648041ef88102ddfe0a51766b2a535ddd3a4c682879615fd220d4.png\\") (104 . 0x5d314a2dd1f648041ef88102ddfe0a51766b2a535ddd3a4c682879615fd220d4) (28021 \\"https://bafybeighvsqccu4nq2zcogcj5avn3odchwd663knfkdemwxn2exkrwidjm.ipfs.nftstorage.link/meta/202281/cc101ce2b80998a8da3fa638b3accff5631abbae9b5e5a13120881efed8145dd.json\\" \\"https://github.com/nongyehezuoshe/bshn/raw/main/meta/202281/cc101ce2b80998a8da3fa638b3accff5631abbae9b5e5a13120881efed8145dd.json\\") (27765) (29550 . 1) (29556 . 1) (28008 . 0xcc101ce2b80998a8da3fa638b3accff5631abbae9b5e5a13120881efed8145dd))",
  "royaltyAddress": "0xf0cc0430114a43b4e16b398f95c03c38a3a668eff3785e5f080fb3ea5ca9cb3c",
  "singletonModHash": "0x7faa3253bfddd1e0decb0906b2dc6247bbc4cf608f58345d173adb63e8b47c9f",
  "tradePricePercentage": 1,
}
`;

exports[`Analyze Nft 5: nft analysis result 1`] = `
Object {
  "coin": Object {
    "amount": 1,
    "parent_coin_info": "0x7430a0a17cf513f030e49b7efd426043b1b41a26b64557da634baadc2057a992",
    "puzzle_hash": "0x973967aaf282b85c918121050c91da3d55fb09a2169bad5ff8da2836a78bd9e6",
  },
  "didOwner": "()",
  "hintPuzzle": "0xbae24162efbd568f89bc7a340798a6118df0189eb9e3f8697bcea27af99f8f79",
  "launcherId": "0x0bc26931dcb5cc6df2982657a906925667eb5a207766f98c90cb04c300b1b758",
  "launcherPuzzleHash": "0xeff07522495060c066f66f32acc2a77e3a3e737aca8baea4d1a64ea4cdc13da9",
  "metadata": Object {
    "imageHash": "b984ae995f4886ed8a07a6e4aa3c7374ae0d8974dfd6cf519f2b1e2b147e256e",
    "imageUri": "https://ejk6hjgqnwntzbows52b53aqmc6bwjsdrg4zea4jm2gw5onnq4.arweave.net/IlX_jpNBtmzyF1pd0HuwQYLwbJkOJuZIDiWaNbrmth0",
    "licenseHash": "00",
    "licenseUri": "",
    "metadataHash": "749a787f8672d31ceb68b1b6f3530dbc0772abf9c6e52bb9c03673e5441546df",
    "metadataUri": "https://uzgsmccirvy7yw7aytqrg2nvbq3tchs3g45zxzocqf3umutkereq.arweave.net/pk0mCEiNcfxb4MThE2m1DDcxHls3O5vlwoF3RlJqJEk",
    "serialNumber": "01",
    "serialTotal": "01",
  },
  "metadataUpdaterPuzzleHash": "0xfe8a4b4e27a2e29a4d3fc7ce9d527adbcaccbab6ada3903ccf3ba9a769d2d78b",
  "nextCoinName": "0xef0462dec44a72f33a960749a55c5ecb5fab81a7e5f7d319ca9c4ef191adf87c",
  "nftOwnershipModHash": "0xc5abea79afaa001b5427dfa0c8cf42ca6f38f5841b78f9b3c252733eb2de2726",
  "nftStateModHash": "0xa04d9f57764f54a43e4030befb4d80026e870519aaa66334aef8304f5d0393c2",
  "p2InnerPuzzle": "(a (q 2 10 (c 2 (c 3 ()))) (c (q (51 . 62) (a (i 5 (q 4 (c 12 (c (a 30 (c 2 (c 9 ()))) ())) (a 22 (c 2 (c 25 (c (a 10 (c 2 (c 13 ()))) ()))))) ()) 1) (a (i 5 (q 4 (c 8 9) (a 22 (c 2 (c 13 (c 11 ()))))) (q . 11)) 1) 2 (i (l 5) (q 11 (q . 2) (a 30 (c 2 (c 9 ()))) (a 30 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1))",
  "p2Owner": "9835f26fe098d8a0e6488719d15fc770285ae4a5e29ba6ac4f3cf99aede66b28",
  "previousOwner": "()",
  "rawMetadata": "((117 \\"https://ejk6hjgqnwntzbows52b53aqmc6bwjsdrg4zea4jm2gw5onnq4.arweave.net/IlX_jpNBtmzyF1pd0HuwQYLwbJkOJuZIDiWaNbrmth0\\") (104 . 0xb984ae995f4886ed8a07a6e4aa3c7374ae0d8974dfd6cf519f2b1e2b147e256e) (28021 \\"https://uzgsmccirvy7yw7aytqrg2nvbq3tchs3g45zxzocqf3umutkereq.arweave.net/pk0mCEiNcfxb4MThE2m1DDcxHls3O5vlwoF3RlJqJEk\\") (28008 . 0x749a787f8672d31ceb68b1b6f3530dbc0772abf9c6e52bb9c03673e5441546df) (27765) (27752 . 0x00) (29550 . 1) (29556 . 1))",
  "royaltyAddress": "0xe1e18f02b8ebf72e227ae11260ff34d417bbfd17a0198ae61fe4b6f3f6832875",
  "singletonModHash": "0x7faa3253bfddd1e0decb0906b2dc6247bbc4cf608f58345d173adb63e8b47c9f",
  "tradePricePercentage": 950,
}
`;

exports[`Analyze Nft 8: nft analysis result 1`] = `
Object {
  "coin": Object {
    "amount": 1,
    "parent_coin_info": "0xdf5592ae5aead18a9a98d76c3d54b292511d9b230bdfd29975d7b4d6f35a05d5",
    "puzzle_hash": "0x72f4131e47360c7b5d04481de13c320a368ad89cbf6e4b0dfad0e6661bf6e978",
  },
  "didOwner": "()",
  "hintPuzzle": "0x7ed1a136bdb4016e62922e690b897e85ee1970f1caf63c1cbe27e4e32f776d10",
  "launcherId": "0x9335e9ef78d3750c2368c02da0c50f4b6d7ac679e8346cdf8db324a100087c47",
  "launcherPuzzleHash": "0xeff07522495060c066f66f32acc2a77e3a3e737aca8baea4d1a64ea4cdc13da9",
  "metadata": Object {
    "imageHash": "e55788ca78f11f3e5524f35267b845f49d79840ba593e4411ba30b70f4d4d3e7",
    "imageUri": Array [
      "https://dweb.link/ipfs/QmRDDsfYLZvJ4aHRTYPnWyNvK8aJ2iFX8D8EaCJN7ncLZR?filename=good.xch.jpg",
      "https://storage.pawket.app/ipfs/QmRDDsfYLZvJ4aHRTYPnWyNvK8aJ2iFX8D8EaCJN7ncLZR?filename=good.xch.jpg",
    ],
    "licenseHash": "",
    "licenseUri": "",
    "metadataHash": "",
    "metadataUri": "",
    "serialNumber": "01",
    "serialTotal": "01",
  },
  "metadataUpdaterPuzzleHash": "0xfe8a4b4e27a2e29a4d3fc7ce9d527adbcaccbab6ada3903ccf3ba9a769d2d78b",
  "nextCoinName": "0x34ed98ba8208fdd3cf5e3d78bbe1b62c88b13652291095e6082ddfa1997b1b9f",
  "nftOwnershipModHash": "0xc5abea79afaa001b5427dfa0c8cf42ca6f38f5841b78f9b3c252733eb2de2726",
  "nftStateModHash": "0xa04d9f57764f54a43e4030befb4d80026e870519aaa66334aef8304f5d0393c2",
  "p2InnerPuzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x92c7027d455e843b1226b757c1dd5e124e0e6ddab3549036a4684b410182fdfd1eee459eb76a4d6d73e94f90fbe6eb1d) 1))",
  "p2Owner": "7ed1a136bdb4016e62922e690b897e85ee1970f1caf63c1cbe27e4e32f776d10",
  "previousOwner": "()",
  "rawMetadata": "((117 \\"https://dweb.link/ipfs/QmRDDsfYLZvJ4aHRTYPnWyNvK8aJ2iFX8D8EaCJN7ncLZR?filename=good.xch.jpg\\" \\"https://storage.pawket.app/ipfs/QmRDDsfYLZvJ4aHRTYPnWyNvK8aJ2iFX8D8EaCJN7ncLZR?filename=good.xch.jpg\\") (104 . 0xe55788ca78f11f3e5524f35267b845f49d79840ba593e4411ba30b70f4d4d3e7) (28021) (27765) (29550 . 1) (29556 . 1))",
  "royaltyAddress": "0x20c2755ec70535afc8a2b0408d47c30d47a1ce1232ccd3379030c3a51363e2b2",
  "singletonModHash": "0x7faa3253bfddd1e0decb0906b2dc6247bbc4cf608f58345d173adb63e8b47c9f",
  "tradePricePercentage": 200,
  "updaterInSolution": true,
}
`;

exports[`Analyze Nft 9: nft analysis result 1`] = `
Object {
  "cnsAddress": "7ef30e6982a73bac072a5dd1d529353b14376397eb7a78b932ef9829d4260482",
  "cnsBindings": undefined,
  "cnsExpiry": "1669962981",
  "cnsName": "asdfgh.xch",
  "coin": Object {
    "amount": 1,
    "parent_coin_info": "0x9dfabaa1ac7b66a08e450783382e182efb1a0c6b763a514d83e61f0a9013d489",
    "puzzle_hash": "0xf4539740c7985f1eeced8de421310bb82c94203e0a5dcc326b48f123b9b29e53",
  },
  "didOwner": "()",
  "hintPuzzle": "0x55bf9e6b0fda4c6657e243f97db8845b5a3b854667edd80f5e621a1ed9e648cc",
  "launcherId": "0xfafc47c9f1d40e8209fe311b29c8ba9f87f4d7d433df9149e7384566836292fc",
  "launcherPuzzleHash": "0xeff07522495060c066f66f32acc2a77e3a3e737aca8baea4d1a64ea4cdc13da9",
  "metadata": Object {
    "address": "7ef30e6982a73bac072a5dd1d529353b14376397eb7a78b932ef9829d4260482",
    "expiry": "1669962981",
    "imageHash": "8f7cce00d9cdab525511358fe89af4a419d6483b271cfb96fb5ba10120a88cf8",
    "imageUri": "https://storage.pawket.app/ipfs/QmbGwa3Ve2oXaJUq2nx3iMteK1PSzuqZvZhFrpqmeMNKFq?filename=asdfgh.xch.jpg",
    "licenseHash": "",
    "licenseUri": "",
    "metadataHash": "861ba42c15d58419fa1aaf3c5eb8f3741b5e21775e77d72432a95dd19c905a4c",
    "metadataUri": "https://storage.pawket.app/ipfs/QmfFfoPDFrJfwZL54v4RCp4MPk4MjC2CsYnuJQJw8zcc2u?filename=asdfgh.xchmetadata.json",
    "name": "asdfgh.xch",
    "serialNumber": "01",
    "serialTotal": "01",
  },
  "metadataUpdaterPuzzleHash": "0x36a5a899b39a95f0fc7421f65f2e79562684bff71434c1799f33a57354649eee",
  "nextCoinName": "0xa34dafa6fb4abcc5d8b5ac469c38cdd9524ee66f588b500d924a348e5a5f55f3",
  "nftOwnershipModHash": "0xc5abea79afaa001b5427dfa0c8cf42ca6f38f5841b78f9b3c252733eb2de2726",
  "nftStateModHash": "0xa04d9f57764f54a43e4030befb4d80026e870519aaa66334aef8304f5d0393c2",
  "p2InnerPuzzle": "(a (q 2 10 (c 2 (c 3 ()))) (c (q (51 . 62) (a (i 5 (q 4 (c 12 (c (a 30 (c 2 (c 9 ()))) ())) (a 22 (c 2 (c 25 (c (a 10 (c 2 (c 13 ()))) ()))))) ()) 1) (a (i 5 (q 4 (c 8 9) (a 22 (c 2 (c 13 (c 11 ()))))) (q . 11)) 1) 2 (i (l 5) (q 11 (q . 2) (a 30 (c 2 (c 9 ()))) (a 30 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1))",
  "p2Owner": "7eddb6c424762b7a1008db41b4b9a60f48cce2215e0e303f56b3a66ce8da9598",
  "previousOwner": "()",
  "rawMetadata": "((117 \\"https://storage.pawket.app/ipfs/QmbGwa3Ve2oXaJUq2nx3iMteK1PSzuqZvZhFrpqmeMNKFq?filename=asdfgh.xch.jpg\\") (104 . 0x8f7cce00d9cdab525511358fe89af4a419d6483b271cfb96fb5ba10120a88cf8) (28021 \\"https://storage.pawket.app/ipfs/QmfFfoPDFrJfwZL54v4RCp4MPk4MjC2CsYnuJQJw8zcc2u?filename=asdfgh.xchmetadata.json\\") (28008 . 0x861ba42c15d58419fa1aaf3c5eb8f3741b5e21775e77d72432a95dd19c905a4c) (27765) (27752) (29550 . 1) (29556 . 1) (25976 . 0x63899ce5) (24932 . 0x7ef30e6982a73bac072a5dd1d529353b14376397eb7a78b932ef9829d4260482) (28269 . \\"asdfgh.xch\\"))",
  "royaltyAddress": "0x5662b49a357db4f05c2c141452b72fb91e7ec286e9b47d6c287210c63ae5cd3e",
  "singletonModHash": "0x7faa3253bfddd1e0decb0906b2dc6247bbc4cf608f58345d173adb63e8b47c9f",
  "tradePricePercentage": 500,
}
`;
